# d3d9-depth-proxy

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  d3d9.def  toolchain-mingw32.cmake
src/: d3d9_proxy.cpp
